update grammar and link to email

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             Gracie Jiu-Jitsu black belt</p>
                             <p class="mt-2 text-extra-large">I created this foundation in an effort to help others. I
                             want to inspire people of all ages to Be the Change. Be the change you’d like to see in this
-                            world. My foundation is a nonprofit organization completely ran by unpaid volunteers. 100%
+                            world. My foundation is a nonprofit organization completely run by unpaid volunteers. 100%
                             of proceeds raised through this foundation are donated back to our community and beyond.</p>
                             <p class="mt-2 text-extra-large">Come back soon for more info!</p>
                             <!-- <a href="#benefits" class="page&#45;scroll btn btn&#45;base&#45;color btn&#45;shadow mt&#45;1">Learn More <i class="fa fa&#45;angle&#45;double&#45;right"></i></a> -->
@@ -1198,10 +1198,9 @@
                                     <div class="contact-card-block h-100 rounded w-100">
                                         <div class="d-table h-100 w-100">
                                             <div class="d-table-cell align-middle">
-                                                <!-- <p class="mb&#45;0 text&#45;xs&#45;medium text&#45;sm&#45;large text&#45;extra&#45;large">Phone: +62 361&#45;723&#45;456</p> -->
                                                 <p class="mb-0 mt-1 text-xs-medium text-sm-large
-                                                text-extra-large">E-mail: <span
-                                                  class="text-underline">brianortegafoundation@gmail.com</span></p>
+                                                text-extra-large">E-mail: 
+                                                   <a href="mailto:brianortegafoundation@gmail.com" target="_top">brianortegafoundation@gmail.com</a>
                                             </div>
                                             <!-- //.d-table-cell -->
                                         </div>
