add donation button

--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                             <div class="col-10 col-xl-8 py-5">
                                 <h3 class="font-alt title-extra-large">Ready to Help?</h3>
                                 <span class="bg-base-color mt-4 sep-line-extra-thick"></span>
-                                <p class="mt-4 title-small">Send us an email!</p>
+                                <p class="mt-4 title-small">Send us an email or donate!</p>
                             </div>
                             <!-- //.col-10 -->
                         </div>
@@ -1210,20 +1210,35 @@
                                 </div>
                                 <!-- //.contact-card -->
 
-                                <!-- <div class="contact&#45;card bg&#45;white border&#45;base&#45;color border&#45;medium&#45;thick border&#45;right box&#45;shadow&#45;wide mt&#45;5 position&#45;relative rounded w&#45;100"> -->
-                                <!--     <img src="assets/images/contact&#45;2.jpg" alt="" class="img&#45;fluid rounded&#45;left"/> -->
-                                <!--  -->
-                                <!--     <div class="contact&#45;card&#45;block h&#45;100 rounded w&#45;100"> -->
-                                <!--         <div class="d&#45;table h&#45;100 w&#45;100"> -->
-                                <!--             <div class="d&#45;table&#45;cell align&#45;middle"> -->
-                                <!--                 <p class="mb&#45;0 text&#45;xs&#45;medium text&#45;sm&#45;large text&#45;extra&#45;large"><span class="text&#45;base&#45;color">Visit Us:</span> Kania Tower, Ubud Central Business District, Sunset Road No. 57, 41373 Ubud, Bali, Indonesia.</p> -->
-                                <!--             </div> -->
-                                <!--             <!&#45;&#45; //.d&#45;table&#45;cell &#45;&#45;> -->
-                                <!--         </div> -->
-                                <!--         <!&#45;&#45; //.d&#45;table &#45;&#45;> -->
-                                <!--     </div> -->
-                                <!--     <!&#45;&#45; //.contact&#45;card&#45;block &#45;&#45;> -->
-                                <!-- </div> -->
+
+                                <div class="contact-card bg-white border-base-color border-medium-thick border-right box-shadow-wide mt-5 position-relative rounded w-100">
+                                    <!-- <img src="assets/images/contact&#45;2.jpg" alt="" class="img&#45;fluid rounded&#45;left"/> -->
+
+                                    <div class="contact-card-block h-100 rounded w-100">
+                                        <div class="d-table h-100 w-100">
+                                            <div class="d-table-cell align-middle">
+                                                <p class="mb-0 text-xs-medium text-sm-large text-extra-large"><span
+                                                  class="text-base-color">Donate:</span><a
+
+                                                  <form action="https://www.paypal.com/cgi-bin/webscr" method="post"
+                                                    target="_top">
+                                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                                    <input type="hidden" name="hosted_button_id" value="EVFGMJYZJMXRQ">
+                                                    <input type="image"
+                                                    src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+                                                    border="0" name="submit" alt="PayPal - The safer, easier way to pay
+                                                    online!">
+                                                    <img alt="" border="0"
+                                                    src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
+                                                    height="1">
+                                                  </form>
+                                            </div>
+                                            <!-- //.d-table-cell -->
+                                        </div>
+                                        <!-- //.d-table -->
+                                    </div>
+                                    <!-- //.contact-card-block -->
+                                </div>
                                 <!-- //.contact-card -->
                             </div>
                             <!-- //.col-10 -->
