update header to include donate

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <!--     <a class="nav&#45;link page&#45;scroll" href="#reviews">Reviews</a> -->
                         <!-- </li> -->
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#contact">Contact</a>
+                            <a class="nav-link page-scroll" href="#contact">Contact & Donate</a>
                         </li>
                     </ul>
                 </div>
