--- a/index.html
+++ b/index.html
@@ -1212,26 +1212,23 @@
 
 
                                 <div class="contact-card bg-white border-base-color border-medium-thick border-right box-shadow-wide mt-5 position-relative rounded w-100">
-                                    <!-- <img src="assets/images/contact&#45;2.jpg" alt="" class="img&#45;fluid rounded&#45;left"/> -->
-
                                     <div class="contact-card-block h-100 rounded w-100">
-                                        <div class="d-table h-100 w-100">
+                                        <div class="d-table h-100 w-100 text-center">
                                             <div class="d-table-cell align-middle">
-                                                <p class="mb-0 text-xs-medium text-sm-large text-extra-large"><span
-                                                  class="text-base-color">Donate:</span><a
-
+                                                <p class="mb-0 mt-1 text-xs-medium text-sm-large
+                                                text-extra-large">
                                                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post"
                                                     target="_top">
                                                     <input type="hidden" name="cmd" value="_s-xclick">
                                                     <input type="hidden" name="hosted_button_id" value="EVFGMJYZJMXRQ">
                                                     <input type="image"
-                                                    src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
-                                                    border="0" name="submit" alt="PayPal - The safer, easier way to pay
-                                                    online!">
+                                                    src="assets/images/paypal.jpg" alt="Paypal" class="img&#45;fluid rounded&#45;left"
+                                                    border="0" name="submit" alt="PayPal">
                                                     <img alt="" border="0"
                                                     src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"
                                                     height="1">
                                                   </form>
+                                                </p>
                                             </div>
                                             <!-- //.d-table-cell -->
                                         </div>
